{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 25,
  "lineage": "e4056d3e-3cb3-f7f8-c2db-aa2051a65b85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "kafka_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a3664ca7984422f",
            "association_id": "eipassoc-08d0d97bc2e64714b",
            "domain": "vpc",
            "id": "eipalloc-06a3664ca7984422f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fa3533b9fcbf0f64",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-34-194-82-140.compute-1.amazonaws.com",
            "public_ip": "34.194.82.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kafka_nat_eip"
            },
            "tags_all": {
              "Name": "kafka_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_pri_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0729e439b6769d6ab",
            "arn": "arn:aws:ec2:us-east-1:122020192764:instance/i-070a1f1c265a55b89",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070a1f1c265a55b89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kafka_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00bb8ec725a27efa0",
            "private_dns": "ip-10-0-2-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c090115c97635b2b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0069e32109b148d45",
            "tags": {
              "Name": "kafka-pri-prod-01"
            },
            "tags_all": {
              "Name": "kafka-pri-prod-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0833d6fbc9a76b7f0"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_pri_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0729e439b6769d6ab",
            "arn": "arn:aws:ec2:us-east-1:122020192764:instance/i-057cb72b27d465d9b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057cb72b27d465d9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kafka_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04737f8a51f9ee524",
            "private_dns": "ip-10-0-2-240.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e47561f792a39115",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0069e32109b148d45",
            "tags": {
              "Name": "kafka-pri-prod-02"
            },
            "tags_all": {
              "Name": "kafka-pri-prod-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0833d6fbc9a76b7f0"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_pri_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_pub_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0729e439b6769d6ab",
            "arn": "arn:aws:ec2:us-east-1:122020192764:instance/i-052560592b533f33b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052560592b533f33b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kafka_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099c445f4da526161",
            "private_dns": "ip-10-0-1-76.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.76",
            "public_dns": "ec2-54-165-9-174.compute-1.amazonaws.com",
            "public_ip": "54.165.9.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03daf57ac70238bbc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021f9033a6687e1d7",
            "tags": {
              "Name": "kafka-pub-prod-01"
            },
            "tags_all": {
              "Name": "kafka-pub-prod-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0833d6fbc9a76b7f0"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_pub_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0729e439b6769d6ab",
            "arn": "arn:aws:ec2:us-east-1:122020192764:instance/i-06e44aeb6e629ccf2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e44aeb6e629ccf2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kafka_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0317823413dec748f",
            "private_dns": "ip-10-0-1-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-3-85-117-41.compute-1.amazonaws.com",
            "public_ip": "3.85.117.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b0d6e6c63a5ba0b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021f9033a6687e1d7",
            "tags": {
              "Name": "kafka-pub-prod-02"
            },
            "tags_all": {
              "Name": "kafka-pub-prod-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0833d6fbc9a76b7f0"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.kafka_pub_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kafka_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122020192764:internet-gateway/igw-0d28b87ff69e296d7",
            "id": "igw-0d28b87ff69e296d7",
            "owner_id": "122020192764",
            "tags": {
              "Name": "kafka_igw"
            },
            "tags_all": {
              "Name": "kafka_igw"
            },
            "vpc_id": "vpc-0db48297c4ee237f1"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kafka_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a3664ca7984422f",
            "connectivity_type": "public",
            "id": "nat-075a47d37b6126f8f",
            "network_interface_id": "eni-0fa3533b9fcbf0f64",
            "private_ip": "10.0.1.57",
            "public_ip": "34.194.82.140",
            "subnet_id": "subnet-021f9033a6687e1d7",
            "tags": {
              "Name": "kafka_nat"
            },
            "tags_all": {
              "Name": "kafka_nat"
            }
          },
          "dependencies": [
            "aws_eip.kafka_nat_eip",
            "aws_subnet.kafka_pub_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kafka_pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122020192764:route-table/rtb-078f0321792a0edae",
            "id": "rtb-078f0321792a0edae",
            "owner_id": "122020192764",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-075a47d37b6126f8f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka_pri_rt"
            },
            "tags_all": {
              "Name": "kafka_pri_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db48297c4ee237f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.kafka_nat",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kafka_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122020192764:route-table/rtb-0b92f7e3cfcee9ac2",
            "id": "rtb-0b92f7e3cfcee9ac2",
            "owner_id": "122020192764",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d28b87ff69e296d7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka_pub_rt"
            },
            "tags_all": {
              "Name": "kafka_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db48297c4ee237f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f1d36980f763c62",
            "route_table_id": "rtb-0b92f7e3cfcee9ac2",
            "subnet_id": "subnet-021f9033a6687e1d7"
          },
          "dependencies": [
            "aws_internet_gateway.kafka_igw",
            "aws_route_table.kafka_pub_rt",
            "aws_subnet.kafka_pub_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b3b30071cc36142",
            "route_table_id": "rtb-078f0321792a0edae",
            "subnet_id": "subnet-0069e32109b148d45"
          },
          "dependencies": [
            "aws_eip.kafka_nat_eip",
            "aws_nat_gateway.kafka_nat",
            "aws_route_table.kafka_pri_rt",
            "aws_subnet.kafka_pri_subnet",
            "aws_subnet.kafka_pub_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122020192764:security-group/sg-0833d6fbc9a76b7f0",
            "description": "Accept incoming connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0833d6fbc9a76b7f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Control Center",
                "from_port": 9021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9021
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "JMX",
                "from_port": 1099,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1099
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "KSQL Server REST API",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kafka Brokers",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kafka Connect REST API",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "REST Proxy",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Schema Registry REST API",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ZooKeeper",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ZooKeeper",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ZooKeeper",
                "from_port": 3888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3888
              }
            ],
            "name": "kafka_sg",
            "name_prefix": "",
            "owner_id": "122020192764",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka_cluster_sg"
            },
            "tags_all": {
              "Name": "kafka_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db48297c4ee237f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kafka_pri_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122020192764:subnet/subnet-0069e32109b148d45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0069e32109b148d45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122020192764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kafka_Private_Subnet"
            },
            "tags_all": {
              "Name": "Kafka_Private_Subnet"
            },
            "vpc_id": "vpc-0db48297c4ee237f1"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kafka_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122020192764:subnet/subnet-021f9033a6687e1d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021f9033a6687e1d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122020192764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Kafka_Public_Subnet"
            },
            "tags_all": {
              "Name": "Kafka_Public_Subnet"
            },
            "vpc_id": "vpc-0db48297c4ee237f1"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kafka_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122020192764:vpc/vpc-0db48297c4ee237f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f23860f86d0d17d5",
            "default_route_table_id": "rtb-04779e971a5ab257d",
            "default_security_group_id": "sg-006ed60381f42fedf",
            "dhcp_options_id": "dopt-042f10be26195aec3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0db48297c4ee237f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04779e971a5ab257d",
            "owner_id": "122020192764",
            "tags": {
              "Name": "Kafka_VPC"
            },
            "tags_all": {
              "Name": "Kafka_VPC"
            }
          }
        }
      ]
    }
  ]
}